# ismm-2020-nonmoving-gc

./: .gitmodules  README.mkd
benchmarks/: Analysis.ipynb  README.mkd  default.nix
benchmarks/bench-utils/: BenchUtils.hs  bench-utils.cabal
benchmarks/edit-distance/: Main.hs  analysis.ipynb  edit-dist.cabal  inputs  run.sh
benchmarks/list-alloc/: Main.hs  run.sh
benchmarks/lru-cache/: Count analysis.ipynb  Main.hs  MkToc.hs  README.mkd  cabal.project  lru-cache.cabal  mk-target-list.py  wrk2.script
benchmarks/map-test/: Main.hs  map-test.cabal
benchmarks/search/: Main.hs  Search.hs  commands  latency-analysis.ipynb  mk-trec-car-corpus.py  search.cabal
