cabal-version:       >=1.10
name:                bench-utils
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2020 Ben Gamari
-- category:
build-type:          Simple

library
  exposed-modules:     BenchUtils
  build-depends:       base >=4.11 && <4.15,
                       mtl,
                       clock
  default-language:    Haskell2010
