cabal-version:       >=1.10
name:                edit-dist
version:             0.1.0.0
license-file:        LICENSE
author:              Laura Dietz
maintainer:          dietz@smart-cactus.org
copyright:           (c) 2020 Laura Dietz
build-type:          Simple

executable edit-dist
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -eventlog
  build-depends:       base >=4.12 && <4.15,
                       MemoTrie,
                       bench-utils
  default-language:    Haskell2010
