cabal-version:       >=1.10
name:                search
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2020 Ben Gamari
build-type:          Simple

executable search
  main-is:             Main.hs
  other-modules:       Search
  ghc-options:         -rtsopts -threaded -eventlog
  build-depends:       base >=4.12 && <4.14,
                       intern,
                       mtl,
                       bench-utils,
                       text,
                       containers,
                       bench-utils,
                       heaps
  default-language:    Haskell2010
